2005-03-23  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/mainwindow.c: Single click on the border now does a big jump, instead of a single 80-pixel scroll.

2005-03-23  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/tooltip.h:
	* src/tooltip.c: Added.
	* src/mainwindow.c: Added tooltip (currently only showing name of road under mouse).  Change border-scroll corner hit targets to be L shaped and take 1/3 of each border.
	* src/map.c: Added hit testing: the ability to test a point for proximity to lines (roads).
	* src/*: Cleanup and code commenting.

2005-03-20  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/history.h:
	* src/history.c: Added.  Stores a list of places for the back/forward buttons.
	* src/Makefile.am: Added history.c.
	* src/gpsclient.c: Re-enabled GPS support.
	* src/mainwindow.c: Added back/forward buttons.  Added GTK about box.
	* src/map.c: Added basic support for tracks (for GPS track).
	* src/map_draw_gdk.c: Added basic drawing of tracks.
	* src/search_road.c: Improved GLib version check.
	* src/track.c: Removed debugging message.

2005-03-19  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/gfreelist.h:
	* src/gfreelist.c: Added.
	* src/Makefile.am: Added gfreelist.c.
	* src/animator.c: Cleanup.
	* src/gui.c: Always show welcome window.
	* src/main.c: Remove gnome_program_init() and add gtk_init() and g_type_init().
	* src/mainwindow.c: Slide to search results, if close enough.
	* src/map.c: Add map_get_distance_in_pixels() and map_points_equal().
	* src/map.h: Limit zoomlevels to 6-10 for preview release.
	* src/map_draw_cairo.c: Add a little padding around labels.
	* src/point.c:
	* src/pointstring.c: Use gfreelist instead of gmemchunk.
	* src/searchwindow.c: Slide to results.
	* data/roadster.glade: Remove gnome widgets.  Change welcome window to explain preview release.

2005-03-18  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/animator.h: